@@ -1,0 +1,9 @@
+<?php
+
+// Class which can be converted to a JSON representation
+abstract class _FlaxJSONObject {
+    // return a JSON representation
+    abstract function toJSON();
+}
+
+?>
